<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory
        android:title="@string/pref_general_cat_title"
        android:key="@string/pref_general_cat_key"
        android:summary="@string/pref_general_cat_summary">
        <com.ludei.devapplib.android.widgets.prefs.CustomListPreference
            android:key="@string/pref_orientation_mode_key"
            android:title="@string/pref_orientation_mode_title"
            android:summary="@string/pref_orientation_mode_summary"
            android:entries="@array/pref_orientation_mode_list"
            android:entryValues="@array/pref_orientation_mode_list_values"
            android:defaultValue="@string/pref_orientation_mode_default"/>
    </com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory>
    <com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory
        android:key="@string/pref_debug_cat_key"
        android:summary="@string/pref_debug_cat_summary"
        android:title="@string/pref_debug_cat_title">
        <com.ludei.devapplib.android.widgets.prefs.CustomSwitchPreference
            android:key="@string/pref_debug_enable_key"
            android:summary="@string/pref_debug_enable_summary"
            android:title="@string/pref_debug_enable_title"
            android:defaultValue="@string/pref_debug_enable_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomListPreference
            android:key="@string/pref_debug_position_key"
            android:summary="@string/pref_debug_position_summary"
            android:title="@string/pref_debug_position_title"
            android:entries="@array/pref_debug_position_list"
            android:entryValues="@array/pref_debug_position_list_values"
            android:defaultValue="@string/pref_debug_position_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomListPreference
            android:key="@string/pref_fps_type_key"
            android:title="@string/pref_fps_type_title"
            android:summary="@string/pref_fps_type_summary"
            android:entries="@array/pref_fps_type_list"
            android:entryValues="@array/pref_fps_type_list_values"
            android:defaultValue="@string/pref_fps_type_default"/>
    </com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory>
    <com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory
        android:key="@string/pref_render_cat_key"
        android:summary="@string/pref_canvasplus_cat_summary"
        android:title="@string/pref_canvasplus_cat_title">
        <com.ludei.devapplib.android.widgets.prefs.CustomSwitchPreference
            android:title="@string/pref_webgl_enabled_title"
            android:summary="@string/pref_webgl_enabled_summary"
            android:key="@string/pref_webgl_enabled_key"
            android:defaultValue="@string/pref_webgl_enabled_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomSwitchPreference
            android:key="@string/pref_remote_debug_enable_key"
            android:summary="@string/pref_remote_debug_enable_summary"
            android:title="@string/pref_remote_debug_enable_title"
            android:defaultValue="@string/pref_remote_debug_enable_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomListPreference
            android:key="@string/pref_webgl_sreencanvas_key"
            android:title="@string/pref_webgl_sreencanvas_title"
            android:summary="@string/pref_webgl_sreencanvas_summary"
            android:entries="@array/pref_webgl_screencanvas_list"
            android:entryValues="@array/pref_webgl_screencanvas_list_values"
            android:defaultValue="@string/pref_webgl_sreencanvas_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomSwitchPreference
            android:key="@string/pref_npot_allowed_key"
            android:summary="@string/pref_npot_allowed_summary"
            android:title="@string/pref_npot_allowed_title"
            android:defaultValue="@string/pref_npot_allowed_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomListPreference
            android:key="@string/pref_texture_reducer_key"
            android:title="@string/pref_texture_reducer_title"
            android:summary="@string/pref_texture_reducer_summary"
            android:entries="@array/pref_texture_reducer_list"
            android:entryValues="@array/pref_texture_reducer_list_values"
            android:defaultValue="@string/pref_texture_reducer_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomListPreference
            android:key="@string/pref_supersampling_level_key"
            android:title="@string/pref_supersampling_level_title"
            android:summary="@string/pref_supersampling_level_summary"
            android:entries="@array/pref_supersampling_level_list"
            android:entryValues="@array/pref_supersampling_level_list_values"
            android:defaultValue="@string/pref_supersampling_level_default"/>
        <com.ludei.devapplib.android.widgets.prefs.CustomListPreference
            android:key="@string/pref_path_render_quality_key"
            android:title="@string/pref_path_render_quality_title"
            android:summary="@string/pref_path_render_quality_summary"
            android:entries="@array/pref_path_render_quality_list"
            android:entryValues="@array/pref_path_render_quality_list_values"
            android:defaultValue="@string/pref_path_render_quality_default"/>
    </com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory>
    <com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory
        android:key="@string/pref_account_cat_key"
        android:summary="@string/pref_account_cat_summary"
        android:title="@string/pref_account_cat_title">
        <Preference
            android:key="@string/pref_logout_key"
            android:title="@string/pref_logout_title"
            android:summary="@string/pref_logout_summary" />
    </com.ludei.devapplib.android.widgets.prefs.CustomPreferenceCategory>
</PreferenceScreen>