<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/search"
        android:title="@string/action_search"
        android:icon="@mipmap/ic_search_w"
        compat:showAsAction="always"
        compat:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/menu_settings"
        android:title="@string/action_settings"
        android:icon="@mipmap/ic_settings"
        compat:showAsAction="always" />

    <group
        android:id="@+id/menu_list_actions">
        <item
            android:id="@+id/menu_multi"
            android:title="@string/action_multi"
            compat:showAsAction="collapseActionView" />

        <item
            android:id="@+id/menu_clear"
            android:title="@string/action_clear"
            compat:showAsAction="collapseActionView" />

        <item
            android:id="@+id/menu_sort_name"
            android:title="@string/action_sort_name"
            compat:showAsAction="collapseActionView"/>

        <item
            android:id="@+id/menu_sort_date"
            android:title="@string/action_sort_date"
            compat:showAsAction="collapseActionView"/>
    </group>

</menu>