<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/background">

    <com.ludei.devapplib.android.widgets.ButtonFont
        android:id="@+id/canvasplus_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:background="@drawable/button"
        android:text="@string/button_cocoonjs"
        android:textColor="@android:color/white"
        app:customFont="@string/app_font_bold"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:layout_weight="1"
        android:gravity="center" />

    <com.ludei.devapplib.android.widgets.ButtonFont
        android:id="@+id/webviewplus_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:background="@drawable/button"
        android:text="@string/button_accelerated_webview"
        android:textColor="@android:color/white"
        app:customFont="@string/app_font_bold"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:layout_weight="1"
        android:gravity="center" />

    <com.ludei.devapplib.android.widgets.ButtonFont
        android:id="@+id/webview_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/button_webview"
        android:textColor="@android:color/white"
        app:customFont="@string/app_font_bold"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:layout_weight="1"
        android:gravity="center" />

</LinearLayout>